design: Fixes #129 - Remove overflow hidden

--- a/service/styles/pages/win.scss
+++ b/service/styles/pages/win.scss
@@ -316,6 +316,7 @@
     .wrapper-sales-for {
       background: #FFFFA0;
       box-shadow: none;
+      overflow: visible;
 
       .the-balancer {
         box-shadow: 2px 2px 41px -14px rgba(0, 0, 0, 0.5);
